Fix for IE 8 making the area too small

--- a/templates/hubbasic2012/css/pages/home.css
+++ b/templates/hubbasic2012/css/pages/home.css
@@ -21,7 +21,7 @@
 	#sub-masthead {
 		padding: 0;
 		position: relative;
-		height: auto;
+		height: auto !important;
 	}
 	#splash {
 		margin: 0 30px;
